# IPL-StatsBoard

./: Makefile  README.md  analysis.py  app.py  app_monolith_backup.py  conftest.py  data_loader.py  feature_engineering.py  generate_sample_data.py  match_winner_encoders.pkl  match_winner_model.pkl  matches.csv  model.py  preprocessing.py  pyproject.toml  setup.sh  test_pipeline.py  visualization.py  win_prob_model.pkl  win_probability.py
